<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/banner_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dip" >
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_btn_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bottom_btn_browse"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/home_page_browse" />

        <Button
            android:id="@+id/bottom_btn_search"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/home_page_search" />

        <Button
            android:id="@+id/bottom_btn_message"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/home_page_information" />

        <Button
            android:id="@+id/bottom_btn_manage"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/home_page_manage" />

        <Button
            android:id="@+id/bottom_btn_more"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/home_page_more" />
    </LinearLayout>

</RelativeLayout>